--- a/src/components/Cart/root.css
+++ b/src/components/Cart/root.css
@@ -15,3 +15,12 @@
     justify-content: space-between;
     align-items: center;
 }
+
+.product button {
+    border: 0;
+    border-radius: 5px;
+    padding: 1rem 1.6rem;
+    font-weight: bolder;
+    color: white;
+    background-color: rgb(101, 21, 177);
+}
