--- a/src/components/Navbar/root.css
+++ b/src/components/Navbar/root.css
@@ -1,20 +1,26 @@
 nav {
-  padding: .5rem;
-  border-bottom: 1px solid #c4c4c4;
+    padding: .5rem;
+    border-bottom: 1px solid #c4c4c4;
+}
+
+a {
+    text-decoration: none;
+    color: #c4c4c4;
+    font-weight: 800;
 }
 
 .inner-container {
-  display: flex;
-  justify-content: space-around;
+    display: flex;
+    justify-content: space-around;
 }
 
 .inner-container h3 {
-  color: #c4c4c4;
-  font-weight: bold;
+    color: #c4c4c4;
+    font-weight: bold;
 }
 
 .inner-container p {
-  color: rgb(59, 143, 115);
-  font-size: x-large;
-  font-weight: bolder;
+    color: rgb(59, 143, 115);
+    font-size: x-large;
+    font-weight: bolder;
 }
